--- a/google/index.html
+++ b/google/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<link href='http://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    google
+   <div class = 'logo'>
+  	Google 
+  </div>
+  <center>
+    <input type="text" class="search">
+</center>
+<center> 
+<form>
+<button class="button1" type="button"> Google Search </button> <button class="button2" type="button"> Feeling Lucky </button>
+</center>
+</form>
   </body>
 </html>
